--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="left">
         <a class="profile">
             <div class="profile-picture">
-                <img src="/images/profile-1.jpg">
+                <img src="images/profile-1.jpg">
             </div>
             <div class="handle">
             <h4>Shubham Sharma</h4>   
@@ -61,7 +61,7 @@
             <div class="notifications-popup">
                 <div>
                     <div class="profile-picture">
-                        <img src="/images/profile-11.jpg">
+                        <img src="images/profile-11.jpg">
                     </div>
                     <div class="notification-body">
                         <b>Rohit Sharma</b> accepted your friend request
@@ -70,7 +70,7 @@
                     </div>
                     <div>
                     <div class="profile-picture">
-                        <img src="/images/profile-9.jpg">
+                        <img src="images/profile-9.jpg">
                     </div>
                     <div class="notification-body">
                         <b>Virat Kohli</b> commented on your post
@@ -79,7 +79,7 @@
                     </div>
                     <div>
                     <div class="profile-picture">
-                        <img src="/images/profile-13.jpg">
+                        <img src="images/profile-13.jpg">
                     </div>
                     <div class="notification-body">
                         <b>Hardik Pandya</b> and<b> 18 others</b> liked your post
@@ -88,7 +88,7 @@
                     </div>
                     <div>
                     <div class="profile-picture">
-                        <img src="/images/profile-5.jpg">
+                        <img src="images/profile-5.jpg">
                     </div>
                     <div class="notification-body">
                         <b>Sachin Tendulkar</b> sent you a friend request
@@ -97,7 +97,7 @@
                     </div>
                     <div>
                     <div class="profile-picture">
-                        <img src="/images/profile-10.jpg">
+                        <img src="images/profile-10.jpg">
                     </div>
                     <div class="notification-body">
                         <b>Jasprit Bumrah</b> tagged you in a post
@@ -106,7 +106,7 @@
                     </div>
                     <div>
                     <div class="profile-picture">
-                        <img src="/images/profile-12.jpg">
+                        <img src="images/profile-12.jpg">
                     </div>
                     <div class="notification-body">
                         <b>Ravindra Jadeja</b> liked your post
@@ -147,37 +147,37 @@
         <div class="stories">
             <div class="story">
                 <div class="profile-picture">
-                    <img src="/images/profile-1.jpg">
+                    <img src="images/profile-1.jpg">
                 </div>
             <p class="name">Your Story</p>
             </div>
             <div class="story">
                 <div class="profile-picture">
-                    <img src="/images/profile-9.jpg">
+                    <img src="images/profile-9.jpg">
                 </div>
             <p class="name">Virat Kohli</p>
             </div>
             <div class="story">
                 <div class="profile-picture">
-                    <img src="/images/profile-10.jpg">
+                    <img src="images/profile-10.jpg">
                 </div>
             <p class="name">Jasprit Bumrah</p>
             </div>
             <div class="story">
                 <div class="profile-picture">
-                    <img src="/images/profile-11.jpg">
+                    <img src="images/profile-11.jpg">
                 </div>
             <p class="name">Rohit Sharma</p>
             </div> 
             <div class="story">
                 <div class="profile-picture">
-                    <img src="/images/profile-12.jpg">
+                    <img src="images/profile-12.jpg">
                 </div>
             <p class="name">Ravindra Jadeja</p>
             </div> 
             <div class="story">
                 <div class="profile-picture">
-                    <img src="/images/profile-13.jpg">
+                    <img src="images/profile-13.jpg">
                 </div>
             <p class="name">Hardik Pandya</p>
             </div> 
@@ -186,7 +186,7 @@
         <!-- End of Stories -->
         <form class="create-post">
             <div class="profile-picture">
-                <img src="/images/profile-1.jpg">
+                <img src="images/profile-1.jpg">
             </div>
             <input type="text"placeholder="What's on your mind,Shubham?" id="create-post">
             <input type="submit"value="Post"class="btn btn-primary">
@@ -198,7 +198,7 @@
                 <div class="head">
                     <div class="user">
                        <div class="profile-picture">
-                        <img src="/images/profile-21.jpg">
+                        <img src="images/profile-21.jpg">
                        </div> 
                        <div class="info">
                         <h3>Magnus Carlsen</h3>
@@ -213,7 +213,7 @@
                        </span>
                 </div>
                 <div class="photo">
-                    <img src="/images/feed-8.jpg">
+                    <img src="images/feed-8.jpg">
                 </div>
                 <div class="action-button">
                     <div class="interaction-buttons">
@@ -239,9 +239,9 @@
                     </div>
                 </div>
                 <div class="liked-by">
-                    <span><img src="/images/profile-9.jpg"></span>
-                    <span><img src="/images/profile-4.jpg"></span>
-                    <span><img src="/images/profile-15.jpg"></span>
+                    <span><img src="images/profile-9.jpg"></span>
+                    <span><img src="images/profile-4.jpg"></span>
+                    <span><img src="images/profile-15.jpg"></span>
                     <p>Liked by<b> Virat Kohli</b> and<b> 879 others</b></p>
                 </div>
                 <div class="caption">
@@ -257,7 +257,7 @@
                 <div class="head">
                     <div class="user">
                        <div class="profile-picture">
-                        <img src="/images/profile-14.jpg">
+                        <img src="images/profile-14.jpg">
                        </div> 
                        <div class="info">
                         <h3>Neeraj Chopra</h3>
@@ -272,7 +272,7 @@
                        </span>
                 </div>
                 <div class="photo">
-                    <img src="/images/feed-9.jpg">
+                    <img src="images/feed-9.jpg">
                 </div>
                 <div class="action-button">
                     <div class="interaction-buttons">
@@ -298,9 +298,9 @@
                     </div>
                 </div>
                 <div class="liked-by">
-                    <span><img src="/images/profile-10.jpg"></span>
-                    <span><img src="/images/profile-4.jpg"></span>
-                    <span><img src="/images/profile-15.jpg"></span>
+                    <span><img src="images/profile-10.jpg"></span>
+                    <span><img src="images/profile-4.jpg"></span>
+                    <span><img src="images/profile-15.jpg"></span>
                     <p>Liked by<b> Jasprit Bumrah</b> and<b> 457 others</b></p>
                 </div>
                 <div class="caption">
@@ -316,7 +316,7 @@
                 <div class="head">
                     <div class="user">
                        <div class="profile-picture">
-                        <img src="/images/profile-22.jpg">
+                        <img src="images/profile-22.jpg">
                        </div> 
                        <div class="info">
                         <h3>Cristiano Ronaldo</h3>
@@ -331,7 +331,7 @@
                        </span>
                 </div>
                 <div class="photo">
-                    <img src="/images/feed-10.jpg">
+                    <img src="images/feed-10.jpg">
                 </div>
                 <div class="action-button">
                     <div class="interaction-buttons">
@@ -357,9 +357,9 @@
                     </div>
                 </div>
                 <div class="liked-by">
-                    <span><img src="/images/profile-7.jpg"></span>
-                    <span><img src="/images/profile-4.jpg"></span>
-                    <span><img src="/images/profile-15.jpg"></span>
+                    <span><img src="images/profile-7.jpg"></span>
+                    <span><img src="images/profile-4.jpg"></span>
+                    <span><img src="images/profile-15.jpg"></span>
                     <p>Liked by<b> Mahendra Singh Dhoni</b> and<b> 983 others</b></p>
                 </div>
                 <div class="caption">
@@ -375,7 +375,7 @@
                 <div class="head">
                     <div class="user">
                        <div class="profile-picture">
-                        <img src="/images/profile-13.jpg">
+                        <img src="images/profile-13.jpg">
                        </div> 
                        <div class="info">
                         <h3>Hardik Pandya</h3>
@@ -390,7 +390,7 @@
                        </span>
                 </div>
                 <div class="photo">
-                    <img src="/images/story-6.jpg">
+                    <img src="images/story-6.jpg">
                 </div>
                 <div class="action-button">
                     <div class="interaction-buttons">
@@ -416,9 +416,9 @@
                     </div>
                 </div>
                 <div class="liked-by">
-                    <span><img src="/images/profile-5.jpg"></span>
-                    <span><img src="/images/profile-4.jpg"></span>
-                    <span><img src="/images/profile-15.jpg"></span>
+                    <span><img src="images/profile-5.jpg"></span>
+                    <span><img src="images/profile-4.jpg"></span>
+                    <span><img src="images/profile-15.jpg"></span>
                     <p>Liked by<b> Sachin Tendulkar</b> and<b> 576 others</b></p>
                 </div>
                 <div class="caption">
@@ -434,7 +434,7 @@
                 <div class="head">
                     <div class="user">
                        <div class="profile-picture">
-                        <img src="/images/profile-23.jpg">
+                        <img src="images/profile-23.jpg">
                        </div> 
                        <div class="info">
                         <h3>Novak Djokovic</h3>
@@ -449,7 +449,7 @@
                        </span>
                 </div>
                 <div class="photo">
-                    <img src="/images/feed-11.jpg">
+                    <img src="images/feed-11.jpg">
                 </div>
                 <div class="action-button">
                     <div class="interaction-buttons">
@@ -475,9 +475,9 @@
                     </div>
                 </div>
                 <div class="liked-by">
-                    <span><img src="/images/profile-10.jpg"></span>
-                    <span><img src="/images/profile-4.jpg"></span>
-                    <span><img src="/images/profile-15.jpg"></span>
+                    <span><img src="images/profile-10.jpg"></span>
+                    <span><img src="images/profile-4.jpg"></span>
+                    <span><img src="images/profile-15.jpg"></span>
                     <p>Liked by<b> Jasprit Bumrah</b> and<b> 123 others</b></p>
                 </div>
                 <div class="caption">
@@ -493,7 +493,7 @@
                 <div class="head">
                     <div class="user">
                        <div class="profile-picture">
-                        <img src="/images/profile-24.jpg">
+                        <img src="images/profile-24.jpg">
                        </div> 
                        <div class="info">
                         <h3>Lebron James</h3>
@@ -508,7 +508,7 @@
                        </span>
                 </div>
                 <div class="photo">
-                    <img src="/images/feed-12.jpg">
+                    <img src="images/feed-12.jpg">
                 </div>
                 <div class="action-button">
                     <div class="interaction-buttons">
@@ -534,9 +534,9 @@
                     </div>
                 </div>
                 <div class="liked-by">
-                    <span><img src="/images/profile-7.jpg"></span>
-                    <span><img src="/images/profile-4.jpg"></span>
-                    <span><img src="/images/profile-15.jpg"></span>
+                    <span><img src="images/profile-7.jpg"></span>
+                    <span><img src="images/profile-4.jpg"></span>
+                    <span><img src="images/profile-15.jpg"></span>
                     <p>Liked by<b> Mahendra Singh Dhoni</b> and<b> 276 others</b></p>
                 </div>
                 <div class="caption">
@@ -552,7 +552,7 @@
                 <div class="head">
                     <div class="user">
                        <div class="profile-picture">
-                        <img src="/images/profile-25.jpg">
+                        <img src="images/profile-25.jpg">
                        </div> 
                        <div class="info">
                         <h3>Usain Bolt</h3>
@@ -567,7 +567,7 @@
                        </span>
                 </div>
                 <div class="photo">
-                    <img src="/images/feed-13.jpg">
+                    <img src="images/feed-13.jpg">
                 </div>
                 <div class="action-button">
                     <div class="interaction-buttons">
@@ -593,9 +593,9 @@
                     </div>
                 </div>
                 <div class="liked-by">
-                    <span><img src="/images/profile-14.jpg"></span>
-                    <span><img src="/images/profile-4.jpg"></span>
-                    <span><img src="/images/profile-15.jpg"></span>
+                    <span><img src="images/profile-14.jpg"></span>
+                    <span><img src="images/profile-4.jpg"></span>
+                    <span><img src="images/profile-15.jpg"></span>
                     <p>Liked by<b> Neeraj Chopra</b> and<b> 490 others</b></p>
                 </div>
                 <div class="caption">
@@ -701,7 +701,7 @@
         <div class="request">
             <div class="info">
                 <div class="profile-picture">
-                 <img src="/images/profile-15.jpg">
+                 <img src="images/profile-15.jpg">
                 </div>
 
             <div>
@@ -724,7 +724,7 @@
      <div class="request">
         <div class="info">
             <div class="profile-picture">
-             <img src="/images/profile-20.jpg">
+             <img src="images/profile-20.jpg">
             </div>
 
         <div>
@@ -747,7 +747,7 @@
  <div class="request">
     <div class="info">
         <div class="profile-picture">
-         <img src="/images/profile-800.jpg">
+         <img src="images/profile-800.jpg">
         </div>
 
     <div>
@@ -864,7 +864,7 @@
     </div>
     </div>
     </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
